# chezmoi-manager

./: CHEZMOI.md  CLAUDE.md  DIFF_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  REFACTORING_ANALYSIS.md  TEXTUAL.md  chezmoi.py  main.py  project.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_wrapper.py
.github/: copilot-instructions.md
app/: __init__.py  base_screen.py  chezmoi_wrapper.py  constants.py
app/screens/: __init__.py  add.py  browse.py  data.py  diff.py  doctor.py  edit.py  files.py  list.py  managed.py  remove.py  status.py
app/styles/: base.tcss
app/widgets/: __init__.py  confirm.py  file_input.py
tests/: __init__.py  test_chezmoi.py  test_chezmoi_wrapper.py  test_screens.py  test_widgets.py
